# app-controle-financeiro

./: README.md  app.py  docker-compose.yml  dockerfile  pyproject.toml
pages/: dashboard.py  upload.py
utils/: auth.py  classificador.py  supabase_client.py
