[project]
name = "app-controle-financeiro"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas-m-cavalheiro",email = "lucas.cavalheiro@solfacil.com.br"}
]
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.58.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "supabase (>=2.31.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "openai (>=2.43.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
